--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gomoku?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=leblanc
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql = true 
+spring.jpa.show-sql = false 
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=INFO
 #logging.level.org.hibernate.type=TRACE
 fr.leblanc.gomoku.engineUrl=http://localhost:9000
