--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>fr.leblanc</groupId>
-	<artifactId>gomoku</artifactId>
+	<artifactId>gomoku-web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gomoku</name>
 	<description>Demo project for Spring Boot</description>
