--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>fr.leblanc</groupId>
 	<artifactId>gomoku-web</artifactId>
 	<version>1.0.0</version>
-	<name>gomoku</name>
+	<name>Gomoku Web Application</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
