--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     depends_on:
       - mysqldb
     ports:
-      - 8080:8080
-      - 8888:8888
+      - ${WEB_PORT}:${WEB_PORT}
+      - ${WEB_DEBUG_PORT}:${WEB_DEBUG_PORT}
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/root?useSSL=false",
@@ -22,7 +22,7 @@ services:
         "spring.datasource.password" : "leblanc",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5Dialect",
         "spring.jpa.hibernate.ddl-auto" : "update",
-        "fr.leblanc.gomoku.engineUrl" : "http://gomoku-engine:9000"
+        "fr.leblanc.gomoku.engineUrl" : "http://gomoku-engine:${ENGINE_PORT}"
         }'
     volumes:
       - .m2:/root/.m2
@@ -31,8 +31,8 @@ services:
   gomoku-engine:
     image: gomoku-engine:1.0.0
     ports:
-      - 9000:9000
-      - 9888:9888
+      - ${ENGINE_PORT}:${ENGINE_PORT}
+      - ${ENGINE_DEBUG_PORT}:${ENGINE_DEBUG_PORT}
     stdin_open: true
     tty: true
 volumes:
