--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = false 
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=INFO
+server.port=8080
 fr.leblanc.gomoku.engineUrl=http://localhost:8081
