--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.8"
 services:
-  mysqldb:
+  gomoku-db:
     image: mysql:5.7
     restart: unless-stopped
     environment:
@@ -8,16 +8,18 @@ services:
       - MYSQL_ROOT_PASSWORD=leblanc
     volumes:
       - db:/var/lib/mysql
+      
   gomoku-web:
     image: gomoku-web:1.0.0
     depends_on:
-      - mysqldb
+      - gomoku-db
+      - gomoku-engine
     ports:
       - ${WEB_PORT}:${WEB_PORT}
       - ${WEB_DEBUG_PORT}:${WEB_DEBUG_PORT}
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/root?useSSL=false",
+        "spring.datasource.url"  : "jdbc:mysql://gomoku-db:3306/root?useSSL=false",
         "spring.datasource.username" : "root",
         "spring.datasource.password" : "leblanc",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5Dialect",
