--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,20 @@ version: "3.8"
 services:
   gomoku-db:
     image: mysql:5.7
-    restart: unless-stopped
     environment:
       - MYSQL_DATABASE=root
       - MYSQL_ROOT_PASSWORD=leblanc
     volumes:
       - db:/var/lib/mysql
-      
+    ports:
+      - 33066:3306
   gomoku-web:
-    image: gomoku-web:1.0.0
+    image: europe-west1-docker.pkg.dev/gomoku-375720/gomoku-web/gomoku-web:1.0
     depends_on:
       - gomoku-db
       - gomoku-engine
     ports:
-      - ${WEB_PORT}:${WEB_PORT}
-      - ${WEB_DEBUG_PORT}:${WEB_DEBUG_PORT}
+      - 8080:8080
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://gomoku-db:3306/root?useSSL=false",
@@ -24,22 +23,11 @@ services:
         "spring.datasource.password" : "leblanc",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5Dialect",
         "spring.jpa.hibernate.ddl-auto" : "update",
-        "fr.leblanc.gomoku.engineUrl" : "http://gomoku-engine:${ENGINE_PORT}"
+        "fr.leblanc.gomoku.engineUrl" : "http://gomoku-engine:8081"
         }'
-    volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
   gomoku-engine:
-    image: gomoku-engine:1.0.0
-    environment:
-      SPRING_APPLICATION_JSON: '{
-        "server.port" : "${ENGINE_PORT}"
-        }'
+    image: europe-west1-docker.pkg.dev/gomoku-375720/gomoku-engine/gomoku-engine:1.0
     ports:
-      - ${ENGINE_PORT}:${ENGINE_PORT}
-      - ${ENGINE_DEBUG_PORT}:${ENGINE_DEBUG_PORT}
-    stdin_open: true
-    tty: true
+      - 8081:8081
 volumes:
   db:
