--- a/k8s_3/gomoku-db-deployment.yaml
+++ b/k8s_3/gomoku-db-deployment.yaml
@@ -1,6 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    kompose.cmd: kompose convert -f docker-compose.yml
+    kompose.version: 1.26.0 (40646f47)
+  creationTimestamp: null
+  labels:
+    io.kompose.service: gomoku-db
   name: gomoku-db
 spec:
   replicas: 1
@@ -10,6 +16,13 @@ spec:
   strategy:
     type: Recreate
   template:
+    metadata:
+      annotations:
+        kompose.cmd: kompose convert -f docker-compose.yml
+        kompose.version: 1.26.0 (40646f47)
+      creationTimestamp: null
+      labels:
+        io.kompose.service: gomoku-db
     spec:
       containers:
         - env:
@@ -32,3 +45,4 @@ spec:
         - name: db
           persistentVolumeClaim:
             claimName: db
+status: {}
