--- a/k8s_3/ingress.yaml
+++ b/k8s_3/ingress.yaml
@@ -13,6 +13,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: gomoku-web-service
+                name: gomoku-web
                 port: 
                   number: 8080
