--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,8 @@ jobs:
         env:
           MYSQL_DATABASE: root
           MYSQL_ROOT_PASSWORD: leblanc
-          MYSQL_USER: root
-          MYSQL_PASSWORD: leblanc
+#          MYSQL_USER: root
+#          MYSQL_PASSWORD: leblanc
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
