change database name for tests

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,10 +23,8 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          MYSQL_DATABASE: root
+          MYSQL_DATABASE: gomoku
           MYSQL_ROOT_PASSWORD: leblanc
-#          MYSQL_USER: root
-#          MYSQL_PASSWORD: leblanc
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
