--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,6 +44,9 @@ jobs:
       if: always() # always run even if the previous step fails
       with:
         report_paths: 'target/surefire-reports/TEST-*.xml'
+        include_passed: true
+        job_summary: true
+        detailed_summary: true
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
