--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,19 +39,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Publish Test Report
-      uses: mikepenz/action-junit-report@v3
-      if: always() # always run even if the previous step fails
-      with:
-        report_paths: 'target/surefire-reports/TEST-*.xml'
-        include_passed: true
-        job_summary: true
-        detailed_summary: true
     - name: Test Report
       uses: dorny/test-reporter@v1
       if: success() || failure()    # run this step even if previous step failed
       with:
-        name: JEST Tests            # Name of the check run which will be created
+        name: JUnit Tests            # Name of the check run which will be created
         path: target/surefire-reports/TEST-*.xml    # Path to test results
         reporter: java-junit        # Format of test results
         
