--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,13 @@ services:
     ports:
       - 33066:3306
   gomoku-web:
-    image: europe-west1-docker.pkg.dev/gomoku-375720/gomoku-web/gomoku-web:1.0
+    image: gomoku-web:1.0.0
     depends_on:
       - gomoku-db
       - gomoku-engine
     ports:
       - 8080:8080
+      - 8888:8888
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://gomoku-db:3306/root?useSSL=false",
@@ -23,11 +24,13 @@ services:
         "spring.datasource.password" : "leblanc",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5Dialect",
         "spring.jpa.hibernate.ddl-auto" : "update",
-        "fr.leblanc.gomoku.engineUrl" : "http://gomoku-engine:8081"
+        "fr.leblanc.gomoku.engineUrl" : "http://gomoku-engine:8081",
+        "fr.leblanc.gomoku.webSocketEngineUrl" : "http://localhost:8081"
         }'
   gomoku-engine:
-    image: europe-west1-docker.pkg.dev/gomoku-375720/gomoku-engine/gomoku-engine:1.0
+    image: gomoku-engine:1.0.0
     ports:
       - 8081:8081
+      - 9888:9888
 volumes:
   db:
