--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/gomoku?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=leblanc
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = false 
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=INFO
 server.port=8080
 fr.leblanc.gomoku.engineUrl=http://localhost:8081
+fr.leblanc.gomoku.webSocketEngineUrl=http://localhost:8081
