--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
       - MYSQL_ROOT_PASSWORD=leblanc
     volumes:
       - db:/var/lib/mysql
-    ports:
-      - 33066:3306
   gomoku-web:
     image: gomoku-web:1.0.0
     depends_on:
@@ -17,19 +15,24 @@ services:
     ports:
       - 8080:8080
       - 8888:8888
+    extra_hosts:
+      - "gomoku-engine.leblanc.fr:172.17.0.1"
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://gomoku-db:3306/root?useSSL=false",
         "spring.datasource.username" : "root",
         "spring.datasource.password" : "leblanc",
         "spring.jpa.hibernate.ddl-auto" : "update",
-        "fr.leblanc.gomoku.engineUrl" : "http://gomoku-engine:8081",
-        "fr.leblanc.gomoku.webSocketEngineUrl" : "http://localhost:8081"
+        "fr.leblanc.gomoku.engineUrl" : "http://gomoku-engine.leblanc.fr:8081"
         }'
   gomoku-engine:
     image: gomoku-engine:1.0.0
     ports:
       - 8081:8081
       - 9888:9888
+  gomoku-http:
+    image: gomoku-http:1.0.0
+    ports:
+      - 80:80
 volumes:
   db:
