--- a/src/main/nginx/nginx.conf
+++ b/src/main/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
     
-    	server_name gomoku-engine.leblanc.fr;
+    	server_name gomoku-engine;
     	
         listen 80;
 
