--- a/src/main/resources/application-sso.properties
+++ b/src/main/resources/application-sso.properties
@@ -6,6 +6,6 @@ spring.security.oauth2.client.provider.external.issuer-uri=http://gomoku-ids:828
 spring.security.oauth2.client.registration.external.provider=external
 spring.security.oauth2.client.registration.external.client-name=external-client
 spring.security.oauth2.client.registration.external.client-id=external-client
-spring.security.oauth2.client.registration.external.client-secret=SWiCB9eesDq74H7WZL76zw1LLmtSj8n2
+spring.security.oauth2.client.registration.external.client-secret=
 spring.security.oauth2.client.registration.external.scope=openid,offline_access,profile
 spring.security.oauth2.client.registration.external.authorization-grant-type=authorization_code
