--- a/docker-compose.sso.yml
+++ b/docker-compose.sso.yml
@@ -34,6 +34,7 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: admin
     ports:
       - 8282:8080
+#    command: start-dev --spi-login-protocol-openid-connect-legacy-logout-redirect-uri=true
     command: start-dev
     volumes:
      - ids:/opt/keycloak/data
